--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -44,16 +44,18 @@ a {
     background-color: #44b3a5;
     width: 100%;
     height: 75px;
-    padding: 30px 20px 0px 10px;
     left: 0;
     right: 0;
     top: 0;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #logo {
     letter-spacing: 3px;
+    margin-left: 10px;
 }
 
 /* Navigation menu */
@@ -62,10 +64,7 @@ a {
     font-weight: 700;
     font-size: 115%;
     font-family: Itim, sans-serif;
-    width: 80%;
-    height: 55%;
-    margin-left: 25px;
-    padding-top: 10px;
+    margin-right: 25px;
 }
 
 #menu ul {
@@ -149,21 +148,21 @@ li.dropdown {
 /* Javascript from W3 school tutorial for sticky nav bar and adjusted for this site
     https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky */
 
-    .sticky {
-        position: fixed;
-        top: 0;
-        width: auto;
-    }
-    
-    .content {
-   padding-top: 20px;
-    }
-    
-    
-    .sticky+.content {
-        padding-top: 120px;
-        padding-bottom: 120px;
-    }
+.sticky {
+    position: fixed;
+    top: 0;
+    width: auto;
+}
+
+.content {
+    padding-top: 20px;
+}
+
+
+.sticky+.content {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 
 /* Footer */
 
@@ -176,15 +175,17 @@ footer {
     left: 0;
     right: 0;
     bottom: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #footer-logo {
     width: 150px;
-    float: left;
     border: solid #DFDCD9 5px;
     text-align: center;
     font-size: 120%;
-    padding-top: 20px;
 }
 
 footer p {
@@ -198,7 +199,7 @@ footer ul {
     margin: 25px 15px 5px 0;
     text-align: right;
     width: auto;
-    float: right;
+
 }
 
 footer li {
@@ -247,10 +248,10 @@ footer li {
     font-size: 110%;
     font-family: Itim, sans-serif;
     background-color: #44b3a5;
-    color:#101010;
+    color: #101010;
     border: 1px solid #333333;
     border-radius: 5px;
-    
+
 }
 
 /* Shadow code from W3 school tutorials */
@@ -613,8 +614,8 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     margin-right: 10px;
     padding: 3px;
     font-size: 110%;
-    font-weight:900;
-    color:#101010;
+    font-weight: 900;
+    color: #101010;
 }
 
 .radio-feedback {
@@ -628,10 +629,10 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     font-size: 120%;
     font-family: Itim, sans-serif;
     background-color: #44b3a5;
-    color:#101010;
+    color: #101010;
     border: 1px solid #333333;
     border-radius: 5px;
-    
+
 }
 
 /* Shadow code from W3 schools */
@@ -736,16 +737,13 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     /* Header */
 
     #header {
-        background-color: #44b3a5;
         width: 100%;
         height: auto;
+        flex-direction: column;
     }
 
     #logo {
-        float: none;
         letter-spacing: 0;
-        text-align: center;
-        padding-top: 10px;
     }
 
     /* Nav */
@@ -756,7 +754,6 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
     #menu ul {
         width: auto;
-        float: none;
     }
 
     #menu li {
@@ -890,7 +887,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     .sections-headers {
         padding: 20px;
         font-size: 150%;
-        
+
     }
 
     .solid-orange {
@@ -999,7 +996,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
     .senses-info-left {
         font-size: 90%;
-        
+
     }
 
     .senses-info-right {
@@ -1335,7 +1332,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     }
 }
 
-@media screen and (max-width: 316px) {
+@media screen and (max-width: 327px) {
 
     /* Header */
 
@@ -1346,7 +1343,21 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     /* Nav */
 
     #menu {
+        font-size: 70%;
+    }
+
+    /* Footer */
+
+    footer li {
+        font-size: 70%;
+    }
+
+    #footer-logo {
         font-size: 80%;
+    }
+
+    footer p {
+        font-size: 35%;
     }
 
     /* Home Page */
@@ -1368,14 +1379,12 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     }
 
     footer li {
-        margin-left: 10px;
         width: fit-content;
         font-size: 70%;
     }
 
     #footer-logo {
         width: fit-content;
-        float: left;
         font-size: 70%;
     }
 
@@ -1383,7 +1392,22 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         font-size: 30%;
     }
 
-    @media screen and (max-width: 255px) {
+    @media screen and (max-width: 258px) {
+
+         /* Footer */
+
+         footer li {
+            font-size: 50%;
+        }
+
+        #footer-logo {
+            font-size: 50%;
+        }
+
+        footer p {
+            font-size: 5%;
+        }
+    }
 
         /* About page */
 
@@ -1460,7 +1484,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         }
     }
 
-    @media screen and (max-width: 242px) {
+    @media screen and (max-width: 251px) {
 
         /* Header */
 
@@ -1478,30 +1502,15 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
 
         #hero-text {
-            font-size: 55%;
+            font-size: 45%;
         }
 
         /* Footer */
 
         footer ul {
-            float: none;
-            margin: 0 auto;
-        }
-
-        footer li {
-            font-size: 60%;
-        }
-
-        #footer-logo {
-            float: none;
-            margin: 0 auto;
-            text-align: center;
-            font-size: 60%;
-        }
-
-        footer p {
-            font-size: 10%;
-        }
+            display: flex;
+            flex-direction: column;
+        } 
     }
 
     @media screen and (max-width: 222px) {
@@ -1516,11 +1525,11 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         /* Footer */
 
         footer p {
-            font-size: 5%;
+            font-size: 3%;
         }
     }
 
-    @media screen and (max-width: 191px) {
+    @media screen and (max-width: 195px) {
 
         /* Header */
 
@@ -1534,33 +1543,17 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
             font-size: 70%;
         }
 
+        * Footer */
+
+
+    footer p {
+        font-size: 0.5%;
+    }
+
         /* Home Page */
 
         #hero-text {
             font: 40%
-        }
-
-        /* Footer */
-
-        footer ul {
-            float: none;
-            margin: 0 auto;
-        }
-
-        footer li {
-            font-size: 35%;
-            text-align: center;
-        }
-
-        #footer-logo {
-            float: none;
-            margin: 0 auto;
-            font-size: 15%;
-            text-align: center;
-        }
-
-        footer p {
-            font-size: 0.5%;
         }
     }
 
@@ -1576,4 +1569,3 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
         font: 30%;
         height: fit-content;
     }
-}
