Remove @media queries to review

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -214,35 +214,43 @@ footer li {
 /* Home page */
 
 #hero-area {
-    text-align: left;
     background: url('../images/home_page.jpg');
-    height: 800px;
+    height: 600px;
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: 10% 30%;
     position: relative;
-    z-index: -2;
-
+    z-index: -1;
 }
 
 #hero-text {
     height: 300px;
     width: 500px;
     background-color: rgb(255, 255, 255, 0.8);
-    bottom: 25%;
-    left: 8%;
     padding-top: 20px;
     padding-bottom: 20px;
     position: absolute;
-    z-index: 9999;
+    z-index: 1;
+    bottom: 200px;
+    left: 80px;
+}
+
+#hero-text p {
+    padding-top: 10px;
+}
+
+#hero-text h3 {
+    padding-top: 10px;
 }
 
 .text-area {
     margin-left: 20px;
+    line-height: 130%;
 }
 
 #learn-more {
-    margin: 25px 20px 0 20px;
+    margin: 30px 20px 0 20px;
     padding: 5px 15px;
     text-align: center;
     font-size: 110%;
@@ -641,931 +649,3 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
-/* @Media queries */
-
-/* Only stick if nav can fit */
-
-@media screen and (max-width: 1090px) {
-
-    /* Home Page */
-
-    #hero-area {
-        height: 500px;
-    }
-}
-
-@media screen and (max-width: 970px) {
-
-    /* About page */
-
-    /* Classes used across page */
-
-    .sections-headers {
-        padding: 30px;
-    }
-
-    .solid-background {
-        width: 800px;
-        padding: 5px;
-    }
-
-    .solid-orange {
-        line-height: 150%;
-    }
-
-    .square-image {
-        width: 250px;
-        height: 250px;
-    }
-
-    /* What is sensory play? */
-
-    .right-align {
-        width: 420px;
-        line-height: 150%;
-    }
-
-    .left-align {
-        width: 420px;
-        line-height: 150%;
-    }
-
-    .senses-info-left {
-        width: 800px;
-    }
-
-    .senses-info-right {
-        width: 800px;
-    }
-
-    /* Play in Motion */
-
-    #iframe {
-        width: 750px;
-        height: 506px;
-    }
-
-    /* Top 10 Activities */
-
-    #top10-pane {
-        width: 800px;
-        height: 1085px;
-    }
-
-    #water-img {
-        top: 375px;
-    }
-
-    #mud-img {
-        top: 815px;
-    }
-
-    .activities-style {
-        width: 480px;
-        padding: 8px;
-    }
-
-    /* Help with Anxiety */
-
-    #anxiety-pane {
-        width: 800px;
-    }
-}
-
-@media screen and (max-width: 900px) {
-
-    /* Header */
-
-    #header {
-        width: 100%;
-        height: auto;
-        flex-direction: column;
-    }
-
-    #logo {
-        letter-spacing: 0;
-    }
-
-    /* Nav */
-
-    #menu {
-        font-size: 100%;
-    }
-
-    #menu ul {
-        width: auto;
-    }
-
-    #menu li {
-        display: list-item;
-        width: auto;
-    }
-
-    #menu li:not(:first-child):before {
-        content: "";
-    }
-
-    .dropdown:hover .dropdown-content {
-        display: none;
-    }
-
-    .sticky+.content {
-        padding-top: 90px;
-    }
-
-    /* Footer */
-
-    footer li {
-        font-size: 120%;
-    }
-
-    /* Homepage */
-
-    #hero-area {
-        height: 400px;
-    }
-
-    #hero-text {
-        height: fit-content;
-        bottom: 0px;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 90%;
-    }
-
-    #learn-more {
-        font-size: 90%;
-    }
-}
-
-@media screen and (max-width: 870px) {
-
-    /* About page */
-
-    /* Classes used across pages */
-
-    .sections-headers {
-        padding: 20px;
-    }
-
-    .solid-background {
-        max-width: 870px;
-        padding: 5px;
-    }
-
-    .solid-orange {
-        line-height: 150%;
-    }
-
-    .square-image {
-        width: 220px;
-        height: 220px;
-    }
-
-    /* What is sensory play? */
-
-    .right-align {
-        max-width: fit-content;
-        line-height: 110%;
-    }
-
-    .left-align {
-        max-width: fit-content;
-        line-height: 110%;
-    }
-
-    /* Play in Motion */
-
-    #iframe {
-        max-width: fit-content;
-        height: auto;
-    }
-
-    /* Top 10 Activities */
-
-    #top10-pane {
-        max-width: fit-content;
-        max-height: fit-content;
-    }
-
-    #water-img {
-        top: 400px;
-    }
-
-    #mud-img {
-        top: 840px;
-    }
-
-    .activities-style {
-        max-width: fit-content;
-    }
-
-    /* Help with Anxiety */
-
-    #anxiety-pane {
-        max-width: fit-content;
-    }
-
-    .anxiety-activity {
-        width: 180px;
-        height: 180px;
-        padding: 5px;
-    }
-}
-
-@media screen and (max-width: 860px) {
-
-    /* About page */
-
-    #about-menu h1 {
-        font-size: 150%;
-    }
-
-    /* Classes used across pages */
-
-    .sections-headers {
-        padding: 20px;
-        font-size: 150%;
-
-    }
-
-    .solid-orange {
-        max-width: 670px;
-        line-height: 110%;
-        font-size: 80%;
-        padding: 2px;
-    }
-
-    .solid-background {
-        max-width: 670px;
-        padding: 2px;
-    }
-
-    .square-image {
-        width: 150px;
-        height: 150px;
-    }
-
-    /* What is sensory play? */
-
-    .right-align {
-        font-size: 80%;
-    }
-
-    .left-align {
-        font-size: 80%;
-    }
-
-    .senses-info-left {
-        max-width: 670px;
-    }
-
-    .senses-info-right {
-        max-width: 670px;
-    }
-
-    /* Top 10 Activities */
-
-    #top10-pane {
-        font-size: 80%;
-    }
-
-    #water-img {
-        top: 300px;
-    }
-
-    #mud-img {
-        top: 650px;
-    }
-
-    /* Help with Anxiety */
-
-    #anxiety-img {
-        width: 400px;
-        height: 300px;
-    }
-
-    .anxiety-activity {
-        width: 150px;
-        height: 150px;
-        padding: 5px;
-    }
-
-    /* Tooltip */
-
-    .tooltip .tooltiptext {
-        font-size: 75%;
-    }
-}
-
-@media screen and (max-width: 670px) {
-
-    /* About page */
-
-    #about-menu h2 {
-        font-size: 140%;
-    }
-
-    /* Classes used across page */
-
-    .sections-headers {
-        padding: 20px;
-        font-size: 130%;
-    }
-
-    .solid-orange {
-        line-height: 130%;
-        font-size: 75%;
-    }
-
-    .square-image {
-        width: 150px;
-        height: 150px;
-    }
-
-    /* What is sensory play? */
-
-    .right-align {
-        font-size: 75%;
-    }
-
-    .left-align {
-        font-size: 75%;
-    }
-
-    .senses-info-left {
-        font-size: 90%;
-
-    }
-
-    .senses-info-right {
-        font-size: 90%;
-    }
-
-    /* Top 10 Activities */
-
-    #top10-pane {
-        font-size: 75%;
-    }
-
-    /* Help with Anxiety */
-
-    #anxiety-pane figcaption {
-        font-size: 75%;
-    }
-
-    .anxiety-activity {
-        width: 130px;
-        height: 130px;
-    }
-
-    /* Tooltip */
-
-    .tooltip .tooltiptext {
-        max-width: fit-content;
-        font-size: 85%;
-    }
-}
-
-@media screen and (max-width: 560px) {
-
-    /* Header */
-
-    #logo {
-        font-size: 100%;
-    }
-
-    /* Nav */
-
-    #menu {
-        font-size: 90%;
-    }
-
-    /* Home Page */
-
-    #hero-area {
-        height: 200px;
-    }
-
-    #hero-text {
-        height: fit-content;
-        width: fit-content;
-        font-size: 70%;
-    }
-
-    #learn-more {
-        padding: 4px;
-        margin: 10px 2px 2px 20px;
-    }
-
-    /* About page */
-
-    #about-menu h2 {
-        font-size: 100%;
-    }
-
-    /* Classes used across pages */
-
-    .sections-headers {
-        padding: 20px;
-        font-size: 100%;
-    }
-
-    .solid-background {
-        max-width: fit-content;
-    }
-
-    .solid-orange {
-        line-height: 120%;
-        font-size: 65%;
-        padding: 3px;
-    }
-
-    .square-image {
-        width: 120px;
-        height: 120px;
-    }
-
-    /* What is sensory play? */
-
-    .right-align {
-        font-size: 65%;
-        padding: 3px;
-    }
-
-    .left-align {
-        font-size: 65%;
-        padding: 3px;
-    }
-
-    .senses-info-left {
-        font-size: 80%;
-        padding: 15px;
-    }
-
-    .senses-info-right {
-        font-size: 80%;
-        padding: 15px;
-    }
-
-    /* Play in Motion */
-
-    /* Top 10 Activities */
-
-    #top10-pane {
-        font-size: 65%;
-    }
-
-    #water-img {
-        top: 420px;
-    }
-
-    .activities-style {
-        width: 230px;
-    }
-
-    /* Help with Anxiety */
-
-    #anxiety-img {
-        width: 300px;
-        height: 200px;
-    }
-
-    #anxiety-pane figcaption {
-        font-size: 70%;
-    }
-
-    .anxiety-activity {
-        width: 100px;
-        height: 100px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-
-    /* Home Page */
-
-    #learn-more {
-        padding: 4px;
-        margin: 5px 2px 2px 20px;
-    }
-
-    /* About page */
-
-    /* Classes used across page*/
-
-    .solid-orange {
-        font-size: 55%;
-    }
-
-    .square-image {
-        width: 100px;
-        height: 100px;
-    }
-
-    /* What is sensory play? */
-
-    .right-align {
-        font-size: 55%;
-        padding: 3px;
-    }
-
-    .left-align {
-        font-size: 55%;
-        padding: 3px;
-    }
-
-    /* Top 10 Activities */
-
-    #top10-pane {
-        font-size: 55%;
-    }
-
-    #water-img {
-        top: 450px;
-    }
-
-    .activities-style {
-        width: 150px;
-    }
-
-    /* Help with Anxiety */
-
-    #anxiety-img {
-        width: 200px;
-        height: 100px;
-    }
-
-    #anxiety-pane figcaption {
-        font-size: 55%;
-    }
-
-    .anxiety-activity {
-        width: 60px;
-        height: 60px;
-    }
-}
-
-@media screen and (max-width: 380px) {
-
-    /* Header */
-
-    #logo {
-        font-size: 95%;
-    }
-
-    /* Nav */
-
-    #menu {
-        font-size: 85%;
-    }
-
-    /* Home Page */
-
-    #hero-area {
-        background: url ('../images/home_page_small');
-        max-height: fit-content;
-    }
-
-    #hero-text {
-        font-size: 68%;
-        padding: 0px;
-    }
-
-    .text-area {
-        margin-left: 2px;
-    }
-
-    #learn-more {
-        font-size: 95%;
-        padding: 2px;
-        margin: 2px 2px 0px 5px;
-    }
-
-    /* Footer */
-
-    footer li {
-        font-size: 75%;
-    }
-
-    #footer-logo {
-        font-size: 85%;
-    }
-
-    footer p {
-        font-size: 35%;
-    }
-
-    /* About page */
-
-    #about-menu h2 {
-        font-size: 80%;
-    }
-
-    /* Classes used across page */
-
-    .sections-headers {
-        padding: 10px;
-        font-size: 70%;
-    }
-
-    .solid-orange {
-        font-size: 35%;
-    }
-
-    .square-image {
-        width: 50px;
-        height: 50px;
-        padding: 1px;
-    }
-
-    /* What is sensory play? */
-
-    .right-align {
-        font-size: 35%;
-        padding: 1px;
-    }
-
-    .left-align {
-        font-size: 35%;
-        padding: 1px;
-    }
-
-    .senses-info-left {
-        font-size: 75%;
-    }
-
-    .senses-info-right {
-        font-size: 75%;
-    }
-
-    /* Top 10 Activities */
-
-    #top10-pane {
-        font-size: 35%;
-    }
-
-    #water-img {
-        top: 350px;
-    }
-
-    .activities-style {
-        width: 100px;
-    }
-
-    /* Help with Anxiety */
-
-    #anxiety-img {
-        width: 150px;
-        height: 90px;
-    }
-
-
-    #anxiety-pane figcaption {
-        font-size: 45%;
-    }
-
-    .anxiety-activity {
-        width: 30px;
-        height: 30px;
-    }
-}
-
-@media screen and (max-width: 327px) {
-
-    /* Header */
-
-    #logo {
-        font-size: 90%;
-    }
-
-    /* Nav */
-
-    #menu {
-        font-size: 70%;
-    }
-
-    /* Footer */
-
-    footer li {
-        font-size: 70%;
-    }
-
-    #footer-logo {
-        font-size: 80%;
-    }
-
-    footer p {
-        font-size: 35%;
-    }
-
-    /* Home Page */
-
-    #hero-text {
-        font-size: 60%;
-        letter-spacing: normal;
-        padding: 0px;
-    }
-
-    #learn-more {
-        padding: 1px;
-        font-size: 95%;
-        margin: 0px 0px 0px 4px;
-    }
-
-    footer ul {
-        width: fit-content;
-    }
-
-    footer li {
-        width: fit-content;
-        font-size: 70%;
-    }
-
-    #footer-logo {
-        width: fit-content;
-        font-size: 70%;
-    }
-
-    footer p {
-        font-size: 30%;
-    }
-
-    @media screen and (max-width: 258px) {
-
-         /* Footer */
-
-         footer li {
-            font-size: 50%;
-        }
-
-        #footer-logo {
-            font-size: 50%;
-        }
-
-        footer p {
-            font-size: 5%;
-        }
-    }
-
-        /* About page */
-
-        #about-menu h2 {
-            font-size: 70%;
-        }
-
-        /* Classes used across page */
-
-        .sections-headers {
-            padding: 8px;
-            font-size: 60%;
-        }
-
-        .solid-orange {
-            font-size: 25%;
-        }
-
-        .square-image {
-            width: 30px;
-            height: 30px;
-            padding: 0px;
-        }
-
-        /* What is sensory play? */
-
-        .right-align {
-            font-size: 25%;
-            padding: 1px;
-        }
-
-        .left-align {
-            font-size: 25%;
-            padding: 1px;
-        }
-
-        .senses-info-left {
-            font-size: 60%;
-        }
-
-        .senses-info-right {
-            font-size: 60%;
-        }
-
-        /* Top 10 Activities */
-
-        #top10-pane {
-            font-size: 25%;
-        }
-
-        #water-img {
-            top: 450px;
-        }
-
-        .activities-style {
-            width: 80px;
-        }
-
-        /* Help with Anxiety */
-
-        #anxiety-img {
-            width: 150px;
-            height: 90px;
-        }
-
-
-        #anxiety-pane figcaption {
-            font-size: 30%;
-        }
-
-        .anxiety-activity {
-            width: 20px;
-            height: 20px;
-        }
-    }
-
-    @media screen and (max-width: 251px) {
-
-        /* Header */
-
-        #logo {
-            font-size: 85%;
-        }
-
-        /* Nav */
-
-        #menu {
-            font-size: 75%;
-        }
-
-        /* Home Page */
-
-
-        #hero-text {
-            font-size: 45%;
-        }
-
-        /* Footer */
-
-        footer ul {
-            display: flex;
-            flex-direction: column;
-        } 
-    }
-
-    @media screen and (max-width: 222px) {
-
-        /* Home Page */
-
-
-        #hero-text {
-            font-size: 50%;
-        }
-
-        /* Footer */
-
-        footer p {
-            font-size: 3%;
-        }
-    }
-
-    @media screen and (max-width: 195px) {
-
-        /* Header */
-
-        #logo {
-            font-size: 80%;
-        }
-
-        /* Nav */
-
-        #menu {
-            font-size: 70%;
-        }
-
-        * Footer */
-
-
-    footer p {
-        font-size: 0.5%;
-    }
-
-        /* Home Page */
-
-        #hero-text {
-            font: 40%
-        }
-    }
-
-    @media screen and (max-width: 186px) {}
-
-    /* Home Page */
-
-    #hero-area {
-        margin-bottom: 15px;
-    }
-
-    #hero-text {
-        font: 30%;
-        height: fit-content;
-    }
