--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -8,6 +8,7 @@ html {
     scroll-behavior: smooth;
     position: relative;
     min-height: 100%;
+    font-size: 62.5%;
 }
 
 
@@ -52,6 +53,7 @@ a {
     align-items: center;
     justify-content: space-between;
     z-index: 2;
+    font-size: 1.5rem;
 }
 
 #logo {
@@ -63,7 +65,7 @@ a {
 
 #menu {
     font-weight: 700;
-    font-size: 115%;
+    font-size: 1.7rem;
     font-family: Itim, sans-serif;
     margin-right: 25px;
 }
@@ -186,11 +188,11 @@ footer {
     width: 150px;
     border: solid #DFDCD9 5px;
     text-align: center;
-    font-size: 120%;
+    font-size: 1.5rem;
 }
 
 footer p {
-    font-size: 50%;
+    font-size: 0.8rem;
 }
 
 /* Social media icons */
@@ -209,7 +211,7 @@ footer li {
     margin-left: 25px;
     width: 25px;
     list-style: none;
-    font-size: 150%;
+    font-size: 1.8rem;
 }
 
 /* Home page */
@@ -229,13 +231,14 @@ footer li {
 #hero-text {
     height: 300px;
     width: 600px;
-    background-color: rgb(255, 255, 255, 0.8);
+    background-color: rgb(255, 255, 255, 0.99);
     padding-top: 20px;
     padding-bottom: 20px;
     position: absolute;
     z-index: 1;
     top: 220px;
     left: 80px;
+    font-size: 1.8rem;
 }
 
 #hero-text p {
@@ -252,10 +255,10 @@ footer li {
 }
 
 #learn-more {
-    margin: 40px 20px 0 20px;
+    margin: 20px 20px 0 20px;
     padding: 5px 15px;
     text-align: center;
-    font-size: 110%;
+    font-size: 2rem;
     font-family: Itim, sans-serif;
     background-color: #44b3a5;
     color: #101010;
@@ -273,7 +276,7 @@ footer li {
 /* About page */
 
 #about-menu h2 {
-    font-size: 200%;
+    font-size: 2.7rem;
     text-align: center;
     padding: 30px 10px 10px 10px;
     margin: 0 auto;
@@ -285,6 +288,7 @@ footer li {
 .sections-headers {
     text-align: center;
     padding: 40px;
+    font-size: 2.2rem;
 }
 
 .solid-background {
@@ -298,6 +302,7 @@ footer li {
 .solid-orange {
     background-color: #E8A87C;
     line-height: 200%;
+    font-size: 1.8rem;
 }
 
 .solid-blue {
@@ -336,6 +341,7 @@ footer li {
     padding-right: 35px;
     padding-top: 20px;
     line-height: 200%;
+    font-size: 1.8rem;
 }
 
 .left-align {
@@ -344,6 +350,7 @@ footer li {
     float: left;
     padding: 20px 20px 0px 35px;
     line-height: 200%;
+    font-size: 1.8rem;
 }
 
 .play-by-pic {
@@ -354,7 +361,7 @@ footer li {
 
 .senses-info-left {
     text-align: left;
-    font-size: 135%;
+    font-size: 2.2rem;
     width: 900px;
     padding: 35px 10px;
     margin: 0 auto;
@@ -362,7 +369,7 @@ footer li {
 
 .senses-info-right {
     text-align: right;
-    font-size: 135%;
+    font-size: 2.2rem;
     width: 900px;
     padding: 35px 10px;
     margin: 0 auto;
@@ -411,28 +418,33 @@ footer li {
 #play-images {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .play-image-internal {
-    margin: 30px 25px;
+    margin: 40px 25px;
 }
 
 #activities-boxes {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .activities-style {
     margin: 5px 5px 5px 0;
     width: 500px;
     padding: 10px;
+    font-size: 1.8rem;
 }
 
 .activities-style h6 {
     font-family: Montserrat, sans-serif;
     font-weight: 900;
     font-style: italic;
-    font-size: 90%;
+    font-size: 1.5rem;
 }
 
 /* Help with Anxiety */
@@ -514,9 +526,9 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 /* Hear from Each Other */
 
 #feedback-heading {
-    font-size: 150%;
+    font-size: 2.2rem;
     text-align: center;
-    padding: 40px 10px 10px 10px;
+    padding: 40px 10px 40px 10px;
 }
 
 .profile-pictures {
@@ -529,34 +541,52 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     float: left;
 }
 
+
+.feed-sub {
+    font-size: 2rem;
+    margin: 0 auto;
+    padding: 30px 10px 0px 10px;
+    width: 900px;
+    height: fit-content;
+}
 .feedback-section {
     display: grid;
     grid-template-columns: auto auto;
     border-bottom: 30px #fff solid;
 }
 
-.feed-sub {
-    font-size: 150%;
-    margin: 0 auto;
-    padding: 10px 10px 0px 10px;
-    width: 900px;
-    height: fit-content;
-}
 
 .feedback-grid {
-    text-align: start;
+    text-align: justify;
     width: 425px;
-    height: 150px;
+    height: 180px;
     line-height: 110%;
-    font-size: 65%;
-    padding: 5px;
-    margin: 3px;
+    padding: 0px 5px 5px 5px;
+    margin: 0px 3px 3px 3px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.feedback-image {
+    margin: 5px;
+}
+
+.feedback-heading {
+    font-size: 1.2rem;
+    font-weight: 800;
+}
+
+.feedback-font {
+    font-size: 1.1rem;
+    font-weight: 600;
 }
 
 /* Get In Touch */
 
 #contact-us-heading {
-    font-size: 150%;
+    font-size: 2.2rem;
     text-align: center;
     padding: 40px 10px 10px 10px;
 }
@@ -577,13 +607,13 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
 #form-background {
     height: fit-content;
-    width: 600px;
+    width: 800px;
     background-color: rgba(255, 253, 253, 0.8);
-    bottom: 5%;
-    right: 8%;
+    bottom: 0.5%;
+    right: 0.5%;
     padding: 20px 40px 20px 20px;
     position: absolute;
-    font-size: 40%;
+    font-size: 1.2rem;
     font-weight: 800;
 }
 
@@ -608,7 +638,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     border: 1px solid #333333;
     border-radius: 5px;
     background: transparent;
-    font-size: 100%;
+    font-size: 1.2rem;
     font-family: Montserrat, sans-serif;
     padding: 5px 10px;
 }
@@ -623,20 +653,24 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     border: none;
     margin-right: 10px;
     padding: 3px;
-    font-size: 110%;
+    font-size: 1.3rem;
     font-weight: 900;
     color: #101010;
 }
 
+#radio-feedback-area {
+    width: 100%;
+}
+
 .radio-feedback {
-    margin: 20px 2px 40px 2px;
+    margin: 20px 2px 40px 10px;
 }
 
 .submit-info {
     margin-top: 5px 10px;
     padding: 10px 30px;
     text-align: center;
-    font-size: 120%;
+    font-size: 2rem;
     font-family: Itim, sans-serif;
     background-color: #44b3a5;
     color: #101010;
@@ -653,7 +687,7 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
 
 /* @Media queries */
 
-@media screen and (max-width: 3072px)(min-width: 2000px) {
+@media screen and (max-width: 3072px min-width: 2000px) {
 
     /* Home Page */
 
@@ -681,12 +715,13 @@ https://www.w3schools.com/css/tryit.asp?filename=trycss_tooltip_arrow_bottom */
     }
 }
 
-@media screen and (max-width: 1440px){
+@media screen and (max-width: 1440px) {
     /* Home page */
 
-#hero-text {
-    top: 350px;
-    left: 60px;
+    #hero-text {
+        top: 350px;
+        left: 60px;
+    }
 }
 
 @media screen and (max-width: 1088px) {
